k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: biblioteca-frontend
  labels:
    app: biblioteca-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: biblioteca-frontend
  template:
    metadata:
      labels:
        app: biblioteca-frontend
    spec:
      containers:
        - name: frontend
          image: acrbibliotecaedu.azurecr.io/biblioteca/frontend:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              name: http
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 20
          resources:
            requests:
              cpu: 25m
              memory: 32Mi
            limits:
              cpu: 50m
              memory: 96Mi
