k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: biblioteca-frontend
  labels:
    app: biblioteca-frontend
spec:
  type: ClusterIP
  selector:
    app: biblioteca-frontend
  ports:
    - name: http
      port: 80
      targetPort: 80
